--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "jest",
+    "docs": "node swagger.js && node index.js",
     "crear-roles-permisos": "node src/infrastructure/scripts/crearRolesPermisos.js",
     "sync-db": "node indexsync.js"
   },
@@ -22,7 +23,9 @@
     "mariadb": "^3.4.0",
     "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
