--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Desplegar en Kubernetes
       run: |
         # Reemplazar el marcador en el manifiesto con el nombre y versión de la imagen
-        sed -i "s|IMAGE_NAME_PLACEHOLDER|${{ env.IMAGE_NAME }}|g" k8s/deployment.yaml
+        sed -i "s|IMAGE_NAME_PLACEHOLDER|${{ env.IMAGE_NAME }}|g" backend/k8s/deployment.yaml
         
         # Aplicar los manifiestos a Kubernetes
-        kubectl apply -f k8s/deployment.yaml
+        kubectl apply -f backend/k8s/deployment.yaml
