--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -21,7 +21,7 @@ jobs:
       env:
         DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_IMAGE_NAME }}
       run: |
-        echo "IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }}:v.0.0.1" >> $GITHUB_ENV
+        echo "IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }}:latest" >> $GITHUB_ENV
         echo "Imagen Docker: ${{ env.IMAGE_NAME }}"
 
     - name: Desplegar en Kubernetes
