--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "amqplib": "^0.10.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "inversify": "^6.1.4",
