feat: fixed routes

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "serviduino-ui",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "/serviduino",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
